sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: ')' expected but 'var' found.
  	for (i <- 0 to n-2-var nombres_parcours){
                           ^AlgBubbleSort2:17: error: illegal start of simple expression
  }while(stop==false)
  ^