sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var n = getNombreValeurs()
  var nombres_parcours = 0
  var echanges = 0
  var stop = false
  do{
  	for (i <- 0 to n-2-var nombres_parcours){
    		if (plusPetit(i+1,i)){
      		echange(i,i+1);
      		echanges = echanges +1
    				}
 				 }
   	if (echanges==0){stop=true};
   	echanges = 0;
 	 	nombres_parcours nombres_parcours +1
  }while(stop==false)
}